--- a/HTML PERSONAL SITE/contact.html
+++ b/HTML PERSONAL SITE/contact.html
@@ -9,11 +9,12 @@
     <h3>CONTACTS</h3>
     <ol>
       <li>
-        MOBILE - 8000000001
+        <a href="https://www.linkedin.com/in/pallavraj40/" target="_blank"></a>LinkedIn
       </li>
       <li>
-        EMAIL - pr@gmail.com
+        Email - pallavraj40@gmail.com
       </li>
+      <li><a href="https://github.com/pallavraj" target="_blank"></a>Github</li>
     </ol>
     <br />
     <hr />
