updated resume site with css

--- a/CSS MY SITE/index.html
+++ b/CSS MY SITE/index.html
@@ -1,47 +1,148 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>PALLAV RAJ</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
-  </head>
-  <body>
-<div class="top">
-<img class="cloud-top" src="images\cloud.png" alt="cloud image" />
-<h1>PALLAV RAJ</h1>
-  <h2>
-    SOFTWARE DEVELOPER
-  </h2>
-  <img class="cloud-bottom" src="images\cloud.png" alt="cloud image">
 
-  <img class="coder" src="images\coding.png" alt="mountan image">
+<head>
+  <meta charset="utf-8">
+  <title>PALLAV RAJ</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+</head>
 
-</div>
-<div class="middle">
+<body>
+  <div class="top">
+    <img class="cloud-top" src="images\cloud.png" alt="cloud image" />
+    <h1>PALLAV RAJ</h1>
+    <h2>
+      SOFTWARE DEVELOPER
+    </h2>
+    <img class="cloud-bottom" src="images\cloud.png" alt="cloud image">
 
-  <div class="profile">
+    <img class="coder" src="images\coding.png" alt="mountan image">
+
+  </div>
+  <div class="middle">
+
+    <div class="profile">
+
       <h3>ABOUT ME</h3>
-    <img class="pallav-pic" src="images/pallav.jfif" alt="pallav image">
-    <p>
-      I am a <strong>B.Tech</strong> in <strong>CSE</strong> graduate of 2019 batch. I have two years of experience as a <strong>"SYSTEMS ENGINEER"</strong> in <strong>TCS</strong> (June 2019-June 2021).
+      <img class="pallav-pic" src="images/pallav.jfif" alt="pallav image">
+      <p>
+        I am a <strong>B.Tech</strong> in <strong>CSE</strong> of 2019 batch. I have two years of experience as a <strong>"SYSTEMS ENGINEER"</strong>
+        in <strong>TCS</strong> (June 2019-June 2021).
       </p>
       <p>
-        Looking for job in the field of software development. My skills and projects are listed below.
+        Looking for job in the field of software development. || IMMEDIATE JOINER
       </p>
-  </div>
+    </div>
+    <hr />
 
-  <div class="experience">
+    <div class="education font">
+      <h3>EDUCATION</h3>
+      <ul>
+        <li>B TECH-CSE || AKTU || 77.30%</li>
+        <li>12th || CBSE || 82.60%</li>
+        <li>10th || CBSE || 10 CGPA</li>
+      </ul>
+    </div>
 
+    <div class="certificate font">
+
+      <h3>CERTIFICATION</h3>
+      <ol>
+        <li>
+
+      <a href="https://www.coursera.org/account/accomplishments/certificate/UC38UWABRJ2P" target="_blank"> Advance Style & Responsive Design - Coursera</a>
+        </li>
+        <li>
+        <a href="https://www.coursera.org/account/accomplishments/certificate/LD9XD6UTAZEU" target="_blank">  HTML5 - Coursera</a>
+        </li>
+        <li>
+        <a href="https://drive.google.com/file/d/17yGnRbIacPK0My3bT1LVpKBd7PmyL8Rc/view" target="_blank"> CORE JAVA - INCAPP</a>
+        </li>
+        <li><a href="" target="_blank"> DBMS - NPTEL (IIT KGP)</a></li>
+          <li><a href="https://drive.google.com/file/d/1PbTDmf2ss-fAaz6dHrNg0zgQq5Tzz-Ag/view" target="_blank"> SOFT SKILLS - IIT BOMBAY</a></li>
+            <li><a href="https://drive.google.com/file/d/1Q8Vch2by3A8YSsnzf6GnDM9ilNeehNdq/view" target="_blank"> Photography - LinkedIn Learning</a></li>
+              <li><a href="" target="_blank">VOLUNTEER - ROTRACT</a></li>
+      </ol>
+
+
+    </div>
+  <hr />
+    <div class="skills font">
+
+
+      <h3>SKILLS</h3>
+    <ul>
+      <li>CORE JAVA</li>
+      <li>SPRING BOOT</li>
+      <li>REST API</li>
+      <li>HTML5</li>
+      <li>CSS</li>
+      <li>DBMS/SQL</li>
+      <li>AGILE SDLC</li>
+      <li>GIT</li>
+    </ul>
+    <hr>
+
+    </div>
+
+<div class="PUBLICATIONS font">
+  <h3>PUBLICATIONS</h3>
+  <ul>
+    <li>
+  <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3565781" target="_blank">Energy Efficient Diagonal based Clustering protocol in Wireless Sensor Network - SSRN</li>
+  </a>
+  <p>Gupta, Priyanshu and Raj, Pallav and Tiwari, Shwetanshu and Kumari, Puja and Mehra, Pawan Singh, Energy Efficient Diagonal Based Clustering Protocol in Wireless Sensor Network (April 1, 2020).
+    Proceedings of the International Conference on Innovative Computing & Communications (ICICC) 2020, Available at SSRN.</p>
+  </ul>
+    <hr />
+</div>
+
+<div class="project font">
+  <h3>PROJECTS</h3>
+  <ul>
+    <li>
+<a href="https://github.com/pallavraj/StudentMonitorSystem" target="_blank">Student Monitoring System - JAVA & SQL</a></li>
+  <li>
+<a href="https://keypiano.netlify.app/" target="_blank">KEYPIANO - A Fun Keyboard Piano</a></li>
+  </ul>
+  <hr>
+
+  <div class="hobbies font">
+    <h3>HOBBIES</h3>
+    <ul>
+      <li>Photography</li>
+      <li>Traveling</li>
+    </ul>
+    <hr>
+    <h3>LANGUAGES</h3>
+    <ul>
+      <li>English</li>
+      <li>Hindi</li>
+    </ul>
+    <hr>
   </div>
 
 </div>
+  </div>
 
-<div class="bottom">
+  <div class="bottom font">
+    <h3>CONTACT ME</h3>
+    <ol>
 
-</div>
-  </body>
+      <li>
+        <a href="https://www.linkedin.com/in/pallavraj40/" target="_blank">LinkedIn</a>
+      </li>
+      <li>
+        Email - pallavraj40@gmail.com
+      </li>
+      <li><a href="https://github.com/pallavraj" target="_blank">Github</a></li>
+    </ol>
+    <br />
+  </div>
+</body>
+
 </html>
